--- a/templates/standard/makefile.erb
+++ b/templates/standard/makefile.erb
@@ -24,6 +24,6 @@ projects[open_framework][download][branch] = "7.x-2.x-dev"
 
 ; Libraries
 libraries[jquery-ui-timepicker][download][type] = "file"
-libraries[jquery-ui-timepicker][download][url] = "https://github.com/unb-libraries/drupal_patches/blob/master/digitalscholarship.lib.unb.ca/jquery-ui-timepicker.zip?raw=true"
+libraries[jquery-ui-timepicker][download][url] = "https://github.com/unb-libraries/build-profile-digitalscholarship.lib.unb.ca/blob/master/libraries/jquery-ui-timepicker.zip?raw=true"
 libraries[jquery-ui-timepicker][directory_name] = "jquery-ui-timepicker"
 libraries[jquery-ui-timepicker][type] = "library"
